--- a/notebooks/Ch04_Feature_Engineering_and_Selection/Feature Selection.ipynb
+++ b/notebooks/Ch04_Feature_Engineering_and_Selection/Feature Selection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
        "CountVectorizer(max_df=0.85, max_features=2000, min_df=0.1)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +192,7 @@
        "4   True  False  False  False  False  False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +222,7 @@
        "       [False, False, False]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +339,7 @@
        "select_feature      True     False  True     False      True     False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -427,7 +427,7 @@
        "4   True  False  False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -534,10 +534,10 @@
     {
      "data": {
       "text/plain": [
-       "SelectKBest(k=15, score_func=<function chi2 at 0x0000016C32B33A60>)"
+       "SelectKBest(k=15, score_func=<function chi2 at 0x00000274F1BFD9D0>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -568,19 +568,19 @@
     {
      "data": {
       "text/plain": [
-       "[('worst area', 112598.4315640537),\n",
-       " ('mean area', 53991.65592375091),\n",
-       " ('area error', 8758.504705334486),\n",
-       " ('worst perimeter', 3665.035416340581),\n",
-       " ('mean perimeter', 2011.1028637679128),\n",
-       " ('worst radius', 491.68915743332025),\n",
-       " ('mean radius', 266.1049171951782),\n",
-       " ('perimeter error', 250.57189635982178),\n",
-       " ('worst texture', 174.4493996057095),\n",
-       " ('mean texture', 93.89750809863374)]"
+       "[('worst area', 112598.43156405364),\n",
+       " ('mean area', 53991.65592375085),\n",
+       " ('area error', 8758.504705334477),\n",
+       " ('worst perimeter', 3665.0354163405946),\n",
+       " ('mean perimeter', 2011.1028637679074),\n",
+       " ('worst radius', 491.6891574333232),\n",
+       " ('mean radius', 266.104917195178),\n",
+       " ('perimeter error', 250.571896359822),\n",
+       " ('worst texture', 174.44939960571074),\n",
+       " ('mean texture', 93.8975080986333)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,25 +592,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('worst area', 112598.4315640537),\n",
-       " ('mean area', 53991.65592375091),\n",
-       " ('area error', 8758.504705334486),\n",
-       " ('worst perimeter', 3665.035416340581),\n",
-       " ('mean perimeter', 2011.1028637679128),\n",
-       " ('worst radius', 491.68915743332025),\n",
-       " ('mean radius', 266.1049171951782),\n",
-       " ('perimeter error', 250.57189635982178),\n",
-       " ('worst texture', 174.4493996057095),\n",
-       " ('mean texture', 93.89750809863374)]"
+       "[('worst area', 112598.43156405364),\n",
+       " ('mean area', 53991.65592375085),\n",
+       " ('area error', 8758.504705334477),\n",
+       " ('worst perimeter', 3665.0354163405946),\n",
+       " ('mean perimeter', 2011.1028637679074),\n",
+       " ('worst radius', 491.6891574333232),\n",
+       " ('mean radius', 266.104917195178),\n",
+       " ('perimeter error', 250.571896359822),\n",
+       " ('worst texture', 174.44939960571074),\n",
+       " ('mean texture', 93.8975080986333)]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -649,39 +649,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('worst area', 112598.4315640537),\n",
-       " ('mean area', 53991.65592375091),\n",
-       " ('area error', 8758.504705334486),\n",
-       " ('worst perimeter', 3665.035416340581),\n",
-       " ('mean perimeter', 2011.1028637679128),\n",
-       " ('worst radius', 491.68915743332025),\n",
-       " ('mean radius', 266.1049171951782),\n",
-       " ('perimeter error', 250.57189635982178),\n",
-       " ('worst texture', 174.4493996057095),\n",
-       " ('mean texture', 93.89750809863374)]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "skb = SelectKBest(score_func=chi2, k=15)\n",
     "skb.fit(bc_X, bc_y)\n",
     "feature_scores = [(item, score) for item, score in zip(bc_data.feature_names, skb.scores_)]\n",
-    "sorted(feature_scores, key=lambda x: -x[1])[:10]"
+    "a = sorted(feature_scores, key=lambda x: -x[1])[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -743,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -911,7 +891,7 @@
        "24                  0.21  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -932,7 +912,7 @@
      "output_type": "stream",
      "text": [
       "Model accuracy statistics with 5-fold cross validation\n",
-      "Model accuracy with complete feature set (569, 30) : 0.9525694767893184\n",
+      "Model accuracy with complete feature set (569, 30) : 0.9507995652848935\n",
       "Model accuracy with selected feature set (569, 15) : 0.9490451793199813\n"
      ]
     }
@@ -963,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -974,7 +954,7 @@
        "RFE(estimator=LogisticRegression(max_iter=5000), n_features_to_select=15)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1013,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1031,7 +1011,7 @@
        " 'worst texture'}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1060,7 +1040,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -1082,19 +1062,19 @@
     {
      "data": {
       "text/plain": [
-       "[('worst perimeter', 0.1454923982300038),\n",
-       " ('worst concave points', 0.1256688779135669),\n",
-       " ('worst area', 0.1042843549188343),\n",
-       " ('mean concave points', 0.08177514822636496),\n",
-       " ('mean radius', 0.07280736661116254),\n",
-       " ('mean concavity', 0.06843728255274797),\n",
-       " ('worst radius', 0.0664248363443258),\n",
-       " ('mean area', 0.06584208547658776),\n",
-       " ('mean perimeter', 0.04213644523686101),\n",
-       " ('area error', 0.03938015425095391)]"
+       "[('worst area', 0.1482363873000455),\n",
+       " ('worst perimeter', 0.14574742188002415),\n",
+       " ('worst radius', 0.1113199375225561),\n",
+       " ('worst concave points', 0.08037275317157087),\n",
+       " ('mean concavity', 0.08021787089482789),\n",
+       " ('mean concave points', 0.07165872746685131),\n",
+       " ('mean area', 0.06340162094046405),\n",
+       " ('area error', 0.04082493154705239),\n",
+       " ('worst concavity', 0.03495319842240027),\n",
+       " ('mean perimeter', 0.02706314388059481)]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1125,7 +1105,7 @@
        "(30, 3)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,7 +1127,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(569, 30)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bc_X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((569, 569), (30,), (30, 30))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U.shape, S.shape, VT.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1164,7 +1184,7 @@
        "       [  771.53,   -88.64,   -23.89]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1187,7 +1207,7 @@
        "PCA(n_components=3)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -1211,7 +1231,7 @@
        "array([0.98204467, 0.01617649, 0.00155751])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1239,7 +1259,7 @@
        "       [-771.53,  -88.64,   23.89]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -1262,7 +1282,7 @@
        "0.9262071106970968"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
